apply plugin: 'java'
apply plugin: 'eclipse'

sourceCompatibility = 1.8
group = 'com.proficiosoftware'
archivesBaseName = 'snap'
version = '0.2'

repositories {
    mavenCentral()
    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
}

dependencies {
      compile 'javax.servlet:javax.servlet-api:3.1.0',
              'io.mikael:urlbuilder:2.0.7',
              'com.fasterxml.jackson.core:jackson-databind:2.7.3',
              'org.rythmengine:rythm-engine:1.1.6-SNAPSHOT',
              'org.jruby.joni:joni:2.1.4',
              'javax.validation:validation-api:1.1.0.Final',
              'javax.mail:javax.mail-api:1.5.2',
              'org.slf4j:slf4j-log4j12:1.7.7'
             
//      runtime  
             
    testCompile group: 'junit', name: 'junit', version: '4.+'
}


jar {
    manifest {
        attributes 'Manifest-Version': '1.0',
                   'Implementation-Title': 'Snap Framework',
                   'Implementation-Version': version,
                   'Class-Path': configurations.compile.collect { it.getName() }.join(' ')
    }
}


test {
    systemProperties 'property': 'value'
}

task sourcesJar(type: Jar, dependsOn: classes) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

task javadocJar(type: Jar, dependsOn: javadoc) {
    classifier = 'javadoc'
    from javadoc.destinationDir
}

artifacts {
  archives sourcesJar, javadocJar
}

uploadArchives {

    repositories {
       ivy {
         url 'repos'
       }
    }
}
